--- a/inicio.ui
+++ b/inicio.ui
@@ -104,9 +104,9 @@
    <widget class="QPushButton" name="btn_login">
     <property name="geometry">
      <rect>
-      <x>160</x>
+      <x>150</x>
       <y>140</y>
-      <width>111</width>
+      <width>121</width>
       <height>51</height>
      </rect>
     </property>
@@ -126,7 +126,7 @@
      <rect>
       <x>10</x>
       <y>50</y>
-      <width>58</width>
+      <width>71</width>
       <height>20</height>
      </rect>
     </property>
@@ -210,7 +210,7 @@
      <rect>
       <x>10</x>
       <y>100</y>
-      <width>81</width>
+      <width>101</width>
       <height>16</height>
      </rect>
     </property>
@@ -285,9 +285,9 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>100</x>
+      <x>10</x>
       <y>10</y>
-      <width>71</width>
+      <width>261</width>
       <height>31</height>
      </rect>
     </property>
@@ -337,6 +337,9 @@
     </property>
     <property name="text">
      <string>LOGIN</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QLabel" name="lbl_message">
